Added ability to create booking which produces kafka event to be consumed

--- a/bookingservice/src/main/resources/application.yaml
+++ b/bookingservice/src/main/resources/application.yaml
@@ -10,6 +10,13 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: none
+  kafka:
+    bootstrap-servers: localhost:9092
+    template:
+      default-topic: booking
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
 inventory:
   service:
