--- a/apigateway/src/main/resources/application.yaml
+++ b/apigateway/src/main/resources/application.yaml
@@ -1,7 +1,18 @@
 spring:
   application:
     name: apigateway
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: "http://localhost:8091/realms/ticketing-security-realm"
+
 server:
   port: 8090
+
+keycloak:
+  auth:
+    jwk-set-uri: "http://localhost:8091/realms/ticketing-security-realm/protocol/openid-connect/certs"
+
 
 inventoryBaseUrl: "http://localhost:8080/api/v1/inventory"
