Added OpenAPI swagger docs, accessible through api gateway, booking service and inventory service

--- a/apigateway/src/main/resources/application.yaml
+++ b/apigateway/src/main/resources/application.yaml
@@ -50,3 +50,18 @@ resilience4j:
       default:
         max-attempts: 3
         wait-duration: 2s
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    urls:
+      - name: Inventory Service
+        url: /docs/inventoryservice/v3/api-docs
+      - name: Booking Service
+        url: /docs/bookingservice/v3/api-docs
+  api-docs:
+    path: /v3/api-docs
+
+security:
+  excluded:
+    urls: "/swagger-ui.html, /swagger-ui/**, /docs/**, /v3/api-docs/**, /swagger-resources/**, /api-docs/**"
