--- a/inventoryservice/src/main/resources/application.yaml
+++ b/inventoryservice/src/main/resources/application.yaml
@@ -16,3 +16,9 @@ server:
 logging:
   level:
     root: debug
+
+springdoc:
+  swagger-ui:
+    path: "/swagger-ui.html"
+  api-docs:
+    path: "/v3/api-docs"
