--- a/bookingservice/src/main/resources/application.yaml
+++ b/bookingservice/src/main/resources/application.yaml
@@ -25,3 +25,8 @@ inventory:
 server:
   port: 8081
 
+springdoc:
+  swagger-ui:
+    path: "/swagger-ui.html"
+  api-docs:
+    path: "/v3/api-docs"
